# dataglowup30

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
decorators/: __init__.py  utils_decorators.py
docs/: index.md  pipeline.md
etl/: __init__.py  charge_init_db.py  extract.py
etl/pipeline/: extract.py
test_data/: test.csv
tests/: test_unit.py
