[tool.poetry]
name = "dataglowup30"
version = "0.1.0"
description = ""
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
mkdocs = "^1.5.3"
black = "^24.2.0"
duckdb = "^0.10.0"
python-dotenv = "^1.0.1"
kaggle = "^1.6.6"
pytest = "^8.0.2"
loguru = "^0.7.2"
isort = "^5.13.2"
mkdocs-material = "^9.5.12"
mkdocstrings-python = "^1.8.0"
mkdocstrings = "^0.24.1"
taskipy = "^1.12.2"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.2"
pre-commit = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "black . && isort ."
test = "pytest -v"
run = "python main.py"